--- a/views/index.jade
+++ b/views/index.jade
@@ -3,19 +3,24 @@ extends layout
 block content
 	section.row
 		div.col-md-12
-			div
-				span Filter out unmuted: 
-				input#filter(type='checkbox')
-			div
-				p (Currently displaying 
-					span#displaying 0
-					|  of 
-					span#total 0
-					|)
-				div#loading Loading the people you follow
-				button#getFriends.btn.btn-default.hidden Load more people you follow
-				
 			div#friendList
+			button#getFriends.btn.btn-default Load more people you follow
+
+block bottom-nav
+	div.container
+		div.navbar-left
+			p.navbar-text (Currently displaying 
+				span.displaying 0
+				|  of 
+				span.total 0
+				|[loaded] of a possible 
+				span.following 0
+				|)
+		div.navbar-right
+			li
+				button.hidden-xs.filter#filter.btn.btn-default.navbar-btn(data-is-filtering='false') Filter out unmuted
+				a.visible-xs.filter(role='menuitem', tabindex='-1', href='#') Filter out unmuted
 
 	script(src="components/jquery/dist/jquery.js")
+	script(src="components/bootstrap/dist/js/bootstrap.min.js")
 	script(src="js/script.js")
