--- a/views/login.jade
+++ b/views/login.jade
@@ -4,4 +4,11 @@ block content
 	h1.brand
 		span.strikeout=title
 	p=loginBlurb
-	a(href="/auth/twitter") Login
+	p Mute was built by 
+		a(href='http://twitter.com/jeshuamaxey') &#64;jeshuamaxey
+		|  after
+		a(href='http://twitter.com/kadhimshubber') &#64;kadhimshubber
+		|  thought it was a good idea. All the code is available under the MIT License on 
+		a(href='http://github.com/jeshuamaxey/mute') GitHub
+
+	a.btn.btn-danger(href="/auth/twitter") Login
