improved/debug UI
improved intuitiveness of filter toggle text and
ensured the number of tweets doesn't disappear
when user toggles filter

--- a/views/index.jade
+++ b/views/index.jade
@@ -17,9 +17,7 @@ block bottom-nav
 				span.following 0
 				|)
 		div.navbar-right
-			li
-				button.hidden-xs.filter#filter.btn.btn-default.navbar-btn(data-is-filtering='false') Filter out unmuted
-				a.visible-xs.filter(role='menuitem', tabindex='-1', href='#') Filter out unmuted
+			button.hidden-xs.filter#filter.btn.btn-default.navbar-btn(data-is-filtering='false') Show muted only
 
 	script(src="components/jquery/dist/jquery.js")
 	script(src="components/bootstrap/dist/js/bootstrap.min.js")
