--- a/views/layout.jade
+++ b/views/layout.jade
@@ -18,7 +18,9 @@ html
 			#top-navbar-collapse.collapse.navbar-collapse.hidden
 				ul.nav.nav-bar.navbar-right
 					li
-						a.visible-xs.filter(role='menuitem', tabindex='-1', href='#') Filter out unmuted (Displaying 
+						a.visible-xs.filter(role='menuitem', tabindex='-1', href='#')
+							span.text Show muted only 
+							| (Displaying 
 							span.displaying 0
 							|  of 
 							span.total 0
